<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.cs2340.rattracker.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/lightBlue"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/login_page_text" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="USERNAME"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="117dp" />

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:hint="PASSWORD"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="205dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|fill_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_button_text"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="315dp"
                android:background="?android:attr/selectableItemBackground" />

            <Button
                android:id="@+id/cancelLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_button_text"
                tools:layout_editor_absoluteX="179dp"
                tools:layout_editor_absoluteY="315dp"
                android:background="?android:attr/selectableItemBackground" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
