<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.cs2340.rattracker.controller.RegisterActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@color/deepBlue">

    <LinearLayout
        android:id="@+id/register_linear_layout"
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/register_page_text"
            android:textColor="#ffff" />

        <EditText
            android:id="@+id/createUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/icons8_usericon_48"
            android:hint="Choose email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:drawableLeft="@drawable/icons8_usericon_48"
            android:drawablePadding="8dp"
            android:ems="10"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="117dp" />

        <EditText
            android:id="@+id/createPassEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:drawableStart="@drawable/icons8_password_48"
            android:drawablePadding="8dp"
            android:hint="Choose password"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="205dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:onClick="onRadioButtonClicked"
                android:text="User" />

            <RadioButton
                android:id="@+id/radio_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:onClick="onRadioButtonClicked"
                android:text="Admin" />

        </RadioGroup>

        <ImageView
            android:id="@+id/mainWelcomeImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:src="@drawable/rats_on_pipe"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="126dp" />

        <LinearLayout
            android:id="@+id/registerButtonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|fill_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/buttonGold"
                android:text="@string/register_button_text"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="315dp" />

            <Button
                android:id="@+id/cancelRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/buttonGold"
                android:text="@string/cancel_button_text"
                tools:layout_editor_absoluteX="179dp"
                tools:layout_editor_absoluteY="315dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
